--- a/collections/ansible_collections/jaredhocutt/homelab/roles/paperless/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/paperless/tasks/main.yml
@@ -65,6 +65,7 @@
     healthcheck_start_period: 20s
     healthcheck_timeout: 5s
     healthcheck: CMD-SHELL pg_isready -d {{ paperless_postgres_db_name }} -U {{ paperless_postgres_user }}
+    labels: "{{ paperless_postgres_container_labels | default(omit) }}"
     quadlet_file_mode: "0600"
     quadlet_options: "{{ paperless_postgres_quadlet_options_base + paperless_postgres_quadlet_options }}"
     state: quadlet
@@ -84,6 +85,7 @@
     healthcheck_start_period: 20s
     healthcheck_timeout: 3s
     healthcheck: CMD-SHELL redis-cli ping | grep PONG
+    labels: "{{ paperless_redis_container_labels | default(omit) }}"
     quadlet_file_mode: "0600"
     quadlet_options: "{{ paperless_redis_quadlet_options_base + paperless_redis_quadlet_options }}"
     state: quadlet
@@ -97,6 +99,7 @@
     network: "{{ paperless_name }}.network"
     env: "{{ paperless_gotenberg_env_vars_base | combine(paperless_gotenberg_env_vars, recursive=True) }}"
     command: gotenberg --chromium-disable-javascript=true --chromium-allow-list='file:///tmp/.*'
+    labels: "{{ paperless_gotenberg_container_labels | default(omit) }}"
     quadlet_file_mode: "0600"
     quadlet_options: "{{ paperless_gotenberg_quadlet_options_base + paperless_gotenberg_quadlet_options }}"
     state: quadlet
@@ -109,6 +112,7 @@
     image: "{{ paperless_tika_image }}:{{ paperless_tika_image_tag }}"
     network: "{{ paperless_name }}.network"
     env: "{{ paperless_tika_env_vars_base | combine(paperless_tika_env_vars, recursive=True) }}"
+    labels: "{{ paperless_tika_container_labels | default(omit) }}"
     quadlet_file_mode: "0600"
     quadlet_options: "{{ paperless_tika_quadlet_options_base + paperless_tika_quadlet_options }}"
     state: quadlet
@@ -127,6 +131,7 @@
       - "{{ paperless_volume_export }}.volume:/usr/src/paperless/export"
       - "{{ paperless_volume_consume }}.volume:/usr/src/paperless/consume"
     publish: "{{ paperless_ports }}"
+    labels: "{{ paperless_container_labels | default(omit) }}"
     healthcheck_interval: 30s
     healthcheck_retries: 5
     healthcheck_start_period: 20s
@@ -147,6 +152,7 @@
     volumes:
       - "{{ paperless_ai_volume_data }}.volume:/app/data"
     publish: "{{ paperless_ai_ports }}"
+    labels: "{{ paperless_ai_container_labels | default(omit) }}"
     quadlet_file_mode: "0600"
     quadlet_options: "{{ paperless_ai_quadlet_options_base + paperless_ai_quadlet_options }}"
     state: quadlet
