--- a/collections/ansible_collections/jaredhocutt/homelab/roles/overseerr/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/overseerr/tasks/main.yml
@@ -30,7 +30,7 @@
     - name: "{{ overseerr_volume_config }}"
       options: "{{ overseerr_volume_config_options | default(omit) }}"
 
-- name: Create container
+- name: Create overseerr container
   containers.podman.podman_container:
     name: "{{ overseerr_name }}"
     image: "{{ overseerr_image }}:{{ overseerr_image_tag }}"
@@ -39,6 +39,7 @@
     volumes:
       - "{{ overseerr_volume_config }}://app/config"
     publish: "{{ overseerr_ports }}"
+    labels: "{{ overseerr_container_labels | default(omit) }}"
     quadlet_file_mode: "0600"
     quadlet_options: "{{ overseerr_quadlet_options_base + overseerr_quadlet_options }}"
     state: quadlet
