--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,13 @@ license = {text = "MIT"}
 readme = "README.md"
 requires-python = ">=3.12,<3.13"
 dependencies = [
-    "ansible-dev-tools (>=25.8,<25.9)",
-    "jmespath (>=1.0.1,<2.0.0)",
-    "bitwarden-sdk (>=1.0.0,<2.0.0)"
+    "ansible-core (>=2.19,<2.20)",
+    "ansible-builder (>=3.1,<3.2)",
+    "ansible-creator (>=25.9)",
+    "ansible-navigator (>=25.9)",
+    "ansible-lint (>=25.9)",
+    "jmespath (>=1.0,<1.1)",
+    "bitwarden-sdk (>=1.0,<1.1)"
 ]
 
 [tool.poetry]
